# friday-OS

./: .env.example  .firebaserc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  backend_openapi.json  diagnostics.py  firebase.json  friday.py  openapi_dump.json  pyproject.toml  rc_test.py  requirements.txt  run.bat  run.sh  setup.bat  setup.ps1  setup.sh  test_endpoints.ps1  test_endpoints.py  test_friday.py  test_hello.py  test_results.json  verify_automation.py  verify_gemini.py  verify_llm.py  verify_memory.py  verify_planner.py  verify_voice.py
.firebase/: hosting.ZnJvbnRlbmRcb3V0.cache
backend/: __init__.py  config.py  dependencies.py  main.py
backend/api/: __init__.py  automation.py  browser.py  chat.py  deps.py  memory.py  middleware.py  system.py  voice.py
backend/automation/: __init__.py  base.py  coordinator.py  engine.py  registry.py  safety.py
backend/automation/tools/: __init__.py  browser.py  clipboard.py  fs.py  gui.py  terminal.py
backend/database/: __init__.py  engine.py  models.py
backend/database/repositories/: __init__.py  conversation_repo.py  memory_repo.py  settings_repo.py  task_repo.py
backend/llm/: __init__.py  context.py  engine.py  events.py  models.py  prompts.py  router.py  tools.py
backend/memory/: __init__.py  chroma.py  handlers.py  manager.py  semantic.py
backend/planner/: __init__.py  analysis.py  engine.py  intent.py  models.py  validator.py
backend/tests/: __init__.py  conftest.py  test_config.py
backend/utils/: __init__.py  exceptions.py  formatters.py  helpers.py  logger.py  validators.py
backend/voice/: __init__.py  audio.py  base.py  model_manager.py  pipeline.py
docs/: api.md  architecture.md  project.md
frontend/: next.config.ts  package-lock.json  package.json
(+62 files in other folders)
