[project]
name = "friday-ai"
version = "0.1.0"
description = "FRIDAY OS — AI Operating System inspired by Iron Man's FRIDAY"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FRIDAY AI Team"}
]

dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",

    # Configuration
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "openwakeword>=0.6.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "scipy>=1.11.0",
    "playwright>=1.42.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.2",

    # Logging
    "structlog>=24.1.0",
    "colorama>=0.4.6",

    # Utilities
    "aiofiles>=24.1.0",
    "orjson>=3.10.0",
    "humanize>=4.9.0",
    "httpx>=0.27.0",

    # AI & Memory
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]
